﻿1.0.45
* Fixed problem when ID of "v" section of the poem was lost in conversion preverting internal linking to it

1.0.44
+ Added ability for FB2ePubGUI to switch languages from menu
* Fixed condition that prevented x86 installer to run on x86 systems :)


1.0.43
+ Added ePub icons to contect menu
+ Added new parameter "/settings" to bring up converter setup window
+ Added first initial implementation of Fb2ePubGUI application (Drag'n'Drop) GUI for converter
* Changed build environment to Visual Studio 2010
* Changed shell extension to not create submenu if no paths set INI INI, in this case the item added to main menu
* Fixed the shell extension bug when providing destination without slash in INI caused resulting file not to be created
* History now loaded as an Annotation block (as it should be) not just as simple text
* Fixed crash related to stack overflow when system was unable to split the file

1.0.42
+ Added hiddeen parameter to skip generation of "About" page
+ Character '«' now also treated as dash, so it wil not be alone in case of dropped capital
+ Epigraph author is now always printed in bold in default style
+ Added different class "epigraph_main" for a book's main epigraphs (not inside sections)
* Fixed bug when font without style attribute and font with "normal" attribute were considered different , this caused sometimes for italic styles to be overwriten
* Fixed crash in case defective PNG file was in original .FB2
* Fixed a bug when CSS stylesheet for one element contained more than one occurance of same parameter (in this case previously entire element was ignored)
* Some small changes to the look of the epigraph in default style
* Conversion part of the code was heavily refactored, so expect new bugs and crashes :)
* Changed default CSS settings for subtitle to allow a bit more space before subtitles (on the top)
* Subtitle element is no longer enclose in DIV - it was not needed
* Drop capitalization is no longer performed on notes sections

